--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Lu Library</string>
     <string name="dialog_cancel">取消</string>
     <string name="dialog_ok">确定</string>
+
+    <string name="remove_photo">移除照片</string>
+    <!-- <string name="choise_photo">选择现有照片</string> -->
+    <string name="choise_photo">相册</string>
+    <string name="take_photo">拍照</string>
+
+    <string name="cancel">取消</string>
+    <string name="crop">裁剪</string>
+    <string name="loading">加载中...</string>
+    <string name="requesting">正在处理</string>
 </resources>
