--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="crop">裁剪</string>
     <string name="loading">加载中...</string>
     <string name="requesting">正在处理</string>
+    <string name="no_network">No network</string>
 </resources>
